# test-assignment-student-template

./: CMakeLists.txt
.github/: mergify.yml
.github/workflows/: test.yml
src/: CMakeLists.txt
